<resources>
    <string name="app_name">NewStuff</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textUsername">username</string>
    <string name="textPassword">password</string>
    <string name="textLoginBut">LOGIN</string>
    <string name="textSignUpBut">SIGN UP</string>
    <string name="textConfirm">CONFIRM</string>
    <string name="textConfirmPassword">confirm your password</string>
    <string name="textLogin">LOGIN</string>
    <string name="textResult">RESULT</string>
    <string name="textSignUp">SIGN UP</string>
    <string name="textAuthName">mamokolo</string>
    <string name="textAuthPassword">aaaaaa</string>
    <string name="textLoginFailed">LOGIN FAILED</string>
    <string name="textLoginFailedText">Wrong username or password. Please check again.</string>
    <string name="textPleaseEnterName">Please enter your username.</string>
    <string name="textPleaseEnterPassword">Please enter your password.</string>
    <string name="textPleaseEnterPasswordConfirm">Please confirm your password.</string>
    <string name="textPleaseSetUpName">Please set up your username.</string>
    <string name="textPleaseSetUpPassword">Please set up your password.</string>
    <string name="textPasswordIsTooShort"><![CDATA[Please set up your password > 6 character]]></string>
    <string name="textUsernameMaxLengthWarning">Max length of username is 16.</string>
    <string name="textPasswordMaxLengthWarning">Max length of password is 18</string>
    <string name="textConfirmPasswordFailed">Confirmed Password is wrong</string>
    <string name="textOK">OK</string>
    <string name="textCongratulation">Congratulation</string>
    <string name="textDifficulty">"Please choose the difficulty"</string>
    <string name="textEasy">EASY</string>
    <string name="textHard">HARD</string>
    <string name="textMedium">MEDIUM</string>
    <string name="textLogout">LOGOUT</string>
    <string name="textHello">Hello!</string>
    <string name="textPause">PAUSE</string>
    <string name="textSkillChoose">Please choose your skill</string>
    <string name="textFlash">flash</string>
    <string name="textHeal">heal</string>
    <string name="textShield">shield</string>
    <string name="textExit">EXIT</string>
    <string name="textResume">RESUME</string>
    <string name="textSkillWrong">There is something go wrong, please try again.</string>
    <string name="textBundleNull">There is something wrong with your account! Please try again!</string>
    <string name="textSkill_is_Usable">Enable</string>
    <string name="textStartBeforeGame">START!</string>
    <string name="textGetReady">Press START! to play</string>
    <string name="textCancel">CANCEL</string>
    <string name="textEndGameWarn">"Are you sure you're want to quit game? Non of your score will be record! "</string>
    <string name="textWarning">WARNING</string>
    <string name="textLogoutWarning">Are you sure you\'re want to logout?</string>
    <string name="textIAmReady">READY!</string>
    <string name="textHowLong">YOUR TIME</string>
    <string name="textHowManyScoreYouGot">YOUR SCORE</string>
    <string name="textLeaveGame">Are you sure you want to quit the game?</string>
    <string name="textWebsite">Website</string>
    <string name="textSuccess">SUCCESS</string>
</resources>